test/data/syntax-errors/bad-statement.derp
nom x derp
9 - 2 derp
pront x derp
